--- a/app/src/main/res/layout/fragment_popuptypes.xml
+++ b/app/src/main/res/layout/fragment_popuptypes.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!-- first option -->
+        <!-- default popup -->
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,7 +33,7 @@
 
         </android.support.v7.widget.CardView>
 
-        <!-- second option -->
+        <!-- custom popup -->
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
 
         </android.support.v7.widget.CardView>
 
-        <!-- second option -->
+        <!-- common popup -->
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,6 +77,72 @@
 
         </android.support.v7.widget.CardView>
 
+        <!-- common popup with recyclerview -->
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_15"
+            app:cardCornerRadius="@dimen/margin_2"
+            android:background="@drawable/ripple"
+            android:clickable="true"
+            app:cardElevation="@dimen/margin_5">
+
+            <TextView
+                android:id="@+id/tv_fourth_popup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/margin_15"
+                android:background="@drawable/ripple"
+                android:clickable="true"
+                android:text="@string/common_popup_list"
+                android:textSize="@dimen/font_16" />
+
+        </android.support.v7.widget.CardView>
+
+        <!-- common popup with input field -->
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_15"
+            app:cardCornerRadius="@dimen/margin_2"
+            android:background="@drawable/ripple"
+            android:clickable="true"
+            android:layout_marginBottom="@dimen/margin_10"
+            app:cardElevation="@dimen/margin_5">
+
+            <TextView
+                android:id="@+id/tv_fifth_popup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/margin_15"
+                android:background="@drawable/ripple"
+                android:clickable="true"
+                android:text="@string/common_popup_inputfield"
+                android:textSize="@dimen/font_16" />
+
+        </android.support.v7.widget.CardView>
+
     </LinearLayout>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ripple"
+        android:clickable="true"
+        android:layout_gravity="bottom"
+        app:cardCornerRadius="@dimen/margin_2"
+        app:cardElevation="@dimen/margin_5">
+
+        <TextView
+            android:id="@+id/tv_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ripple"
+            android:clickable="true"
+            android:padding="@dimen/margin_15"
+            android:text="@string/simple_popup"
+            android:textSize="@dimen/font_16" />
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
