--- a/app/src/main/res/layout/fragment_popuptypes.xml
+++ b/app/src/main/res/layout/fragment_popuptypes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/appBackcolor"
@@ -21,6 +21,19 @@
             app:cardCornerRadius="@dimen/margin_2"
             app:cardElevation="@dimen/margin_5">
 
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_help"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/margin_10"
+                />
+
             <TextView
                 android:id="@+id/tv_first_popup"
                 android:layout_width="match_parent"
@@ -31,6 +44,7 @@
                 android:text="@string/simple_popup"
                 android:textSize="@dimen/font_16" />
 
+            </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <!-- custom popup -->
@@ -107,7 +121,6 @@
             app:cardCornerRadius="@dimen/margin_2"
             android:background="@drawable/ripple"
             android:clickable="true"
-            android:layout_marginBottom="@dimen/margin_10"
             app:cardElevation="@dimen/margin_5">
 
             <TextView
@@ -122,6 +135,29 @@
 
         </android.support.v7.widget.CardView>
 
+        <!-- common popup with checkbox field -->
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_15"
+            app:cardCornerRadius="@dimen/margin_2"
+            android:background="@drawable/ripple"
+            android:clickable="true"
+            android:layout_marginBottom="@dimen/margin_10"
+            app:cardElevation="@dimen/margin_5">
+
+            <TextView
+                android:id="@+id/tv_sixth_popup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/margin_15"
+                android:background="@drawable/ripple"
+                android:clickable="true"
+                android:text="@string/common_popup_checkbox"
+                android:textSize="@dimen/font_16" />
+
+        </android.support.v7.widget.CardView>
+
     </LinearLayout>
 
     <android.support.v7.widget.CardView
@@ -129,7 +165,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/ripple"
         android:clickable="true"
-        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
         app:cardCornerRadius="@dimen/margin_2"
         app:cardElevation="@dimen/margin_5">
 
@@ -145,4 +181,4 @@
 
     </android.support.v7.widget.CardView>
 
-</LinearLayout>
+</RelativeLayout>
