--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="appBackcolor">#CCCCCC</color>
+    <color name="playColor">#E8EAF6</color>
 </resources>
