--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,28 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:contextnew=".MainActivity">
 
-    <item android:id="@+id/action_viewlist"
-        android:title="Viewlist"
-        android:icon="@mipmap/ic_viewlistnew"
-        android:orderInCategory="300"
-        app:showAsAction="ifRoom" />
+    <group
+        android:id="@+id/search_group"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/action_search"
+            android:icon="@mipmap/ic_search"
+            android:title="Search"
+            app:actionViewClass="android.support.v7.widget.SearchView"
+            app:showAsAction="ifRoom|collapseActionView" />
+    </group>
 
-    <item android:id="@+id/action_settings"
-        android:title="Settings"
-        android:icon="@drawable/ic_camera_icon"
-        android:iconTint="@color/colorAccent"
-        android:orderInCategory="300"
-        app:showAsAction="never" />
-
-    <item android:id="@+id/action_refresh"
-        android:title="Refresh"
-        android:icon="@drawable/ic_camera_icon"
-        android:orderInCategory="200"
-        app:showAsAction="never" />
-
-    <item android:id="@+id/action_new"
-        android:title="New"
-        android:icon="@drawable/ic_camera_icon"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
 </menu>
