--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,10 @@
     <color name="white">#FFFFFF</color>
     <color name="appBackcolor">#CCCCCC</color>
     <color name="playColor">#E8EAF6</color>
+
+    <color name="greenColor">#258e02</color>
+    <color name="blueColor">#0a23b7</color>
+    <color name="redColor">#e40615</color>
+    <color name="pinkColor">#e2088b</color>
+    <color name="yellowColor">#F5C614</color>
 </resources>
