--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -158,7 +158,7 @@
                 android:layout_weight="2"
                 app:hintTextAppearance="@style/TextLabel_UpdateProfile">
 
-                <EditText
+                <com.maram.myexample.View.customView.CustomEdittext
                     android:id="@+id/edt_name"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
@@ -166,8 +166,9 @@
                     android:background="#ffffff"
                     android:drawablePadding="10dp"
                     android:hint="Enter Name"
-                    android:inputType="textPersonName"
+                    android:inputType="textNoSuggestions"
                     android:maxLength="50"
+
                     android:paddingLeft="10dp"
                     android:paddingRight="5dp"
                     android:textColor="#000000"
