--- a/app/src/main/res/layout/toolbar_common.xml
+++ b/app/src/main/res/layout/toolbar_common.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -7,22 +8,57 @@
         android:id="@+id/toolbar_layout"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
+        android:background="?attr/colorAccent"
         android:gravity="center"
-        android:title="@string/app_name"
-        android:theme="@style/ThemeOverlay.AppCompat.Light">
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Light"
+        android:title="@string/app_name">
 
         <TextView
             android:id="@+id/toolbar_title"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Toolbar Title"
-            android:textSize="@dimen/margin_20"
-            android:textColor="@android:color/white"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:layout_gravity="center"
-            />
+            android:text="Toolbar Title"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/margin_20" />
+
+        <!--Flag icon for registration-->
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardview_language_flag"
+            android:layout_width="37dp"
+            android:layout_height="25dp"
+            android:layout_gravity="right"
+            android:layout_marginBottom="@dimen/margin_15"
+            android:layout_marginLeft="@dimen/margin_10"
+            android:layout_marginRight="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_10"
+            android:background="@drawable/border"
+            android:innerRadius="0dp"
+            android:padding="@dimen/margin_5"
+            app:cardElevation="@dimen/margin_10">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_2"
+                android:layout_marginLeft="@dimen/margin_2"
+                android:layout_marginRight="@dimen/margin_2"
+                android:layout_marginTop="@dimen/margin_2">
+
+                <ImageView
+                    android:id="@+id/imageview_change_language"
+                    android:layout_width="35dp"
+                    android:layout_height="23dp"
+                    android:layout_gravity="center"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/flag_myanma"
+                    android:visibility="visible" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
 
     </android.support.v7.widget.Toolbar>
 
