--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorlightPrimary">#9eabf5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryDark">#b37802</color>
+    <color name="colorAccent">#fab53d</color>
     <color name="dark_blue">#2E3192</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
