--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="WithActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
     <style name="TextLabel_UpdateProfile" parent="TextAppearance.Design.Hint">
         <item name="android:textSize">14sp</item>
         <item name="android:textColorHint">@color/dark_blue</item>
@@ -16,7 +23,6 @@
         <item name="colorControlNormal">@color/black</item>
         <item name="colorControlActivated">@color/black</item>
         <item name="colorPrimary">@color/black</item>
-
     </style>
 
     <style name="AppThemePopup" parent="android:Theme.Light" />
