--- a/app/src/main/res/layout/fragment_toasttypes.xml
+++ b/app/src/main/res/layout/fragment_toasttypes.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:id="@+id/relativelayout_main"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/appBackcolor"
     android:orientation="vertical">
@@ -177,7 +177,7 @@
 
         </android.support.v7.widget.CardView>
 
-        <!--drop down-->
+        <!--drop down
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -250,7 +250,7 @@
                 </LinearLayout>
             </LinearLayout>
 
-        </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>-->
 
     </LinearLayout>
 
